charts: allow service envoy sidecars to be configurable (#117)

--- a/deployments/charts/service/templates/api-service.yaml
+++ b/deployments/charts/service/templates/api-service.yaml
@@ -223,7 +223,7 @@ spec:
       {{- end }}
       {{- include "osmo.extra-sidecars" .Values.services.service | nindent 6 }}
       volumes:
-        {{- include "osmo.envoy-volumes" (dict "serviceName" .Values.services.service.serviceName "Values" .Values) | nindent 8 }}
+        {{- include "osmo.envoy-volumes" (dict "serviceName" .Values.services.service.serviceName "serviceEnvoy" .Values.services.service.envoy "Values" .Values) | nindent 8 }}
         {{- include "osmo.extra-volumes" .Values.services.service | nindent 8 }}
         {{- if .Values.sidecars.otel.enabled }}
         {{- include "osmo.otel-volumes" . | nindent 8 }}
@@ -248,7 +248,7 @@ spec:
 ---
 {{- if .Values.sidecars.envoy.enabled }}
 
-{{- include "osmo.envoy-config" (dict "serviceName" .Values.services.service.serviceName "Values" .Values "Release" .Release) }}
+{{- include "osmo.envoy-config" (dict "serviceName" .Values.services.service.serviceName "serviceEnvoy" .Values.services.service.envoy "Values" .Values "Release" .Release) }}
 ---
 {{- end }}
 
