--- a/deployments/charts/service/templates/agent-service.yaml
+++ b/deployments/charts/service/templates/agent-service.yaml
@@ -203,7 +203,7 @@ spec:
       {{- include "osmo.log-agent-sidecar-container" . | nindent 6}}
       {{- include "osmo.extra-sidecars" .Values.services.agent | nindent 6 }}
       volumes:
-        {{- include "osmo.envoy-volumes" (dict "serviceName" .Values.services.agent.serviceName "Values" .Values) | nindent 8 }}
+        {{- include "osmo.envoy-volumes" (dict "serviceName" .Values.services.agent.serviceName "serviceEnvoy" .Values.services.agent.envoy "Values" .Values) | nindent 8 }}
         {{- include "osmo.extra-volumes" .Values.services.agent | nindent 8 }}
         {{- if .Values.sidecars.otel.enabled }}
         {{- include "osmo.otel-volumes" . | nindent 8 }}
@@ -226,7 +226,7 @@ spec:
 ---
 {{- if .Values.sidecars.envoy.enabled }}
 
-{{- include "osmo.envoy-config" (dict "serviceName" .Values.services.agent.serviceName "Values" .Values "Release" .Release) }}
+{{- include "osmo.envoy-config" (dict "serviceName" .Values.services.agent.serviceName "serviceEnvoy" .Values.services.agent.envoy "Values" .Values "Release" .Release) }}
 ---
 {{- end }}
 
