--- a/src/service/router/BUILD
+++ b/src/service/router/BUILD
@@ -16,11 +16,10 @@ limitations under the License.
 SPDX-License-Identifier: Apache-2.0
 """
 
-load("//bzl:py.bzl", "osmo_py_binary", "osmo_py_library")
-load("@aspect_bazel_lib//lib:run_binary.bzl", "run_binary")
+load("@aspect_rules_py//py:defs.bzl", "py_image_layer")
+load("//bzl:py.bzl", "osmo_py_binary", "osmo_py_library", "osmo_python_wrapper")
 load("@osmo_python_deps//:requirements.bzl", "requirement")
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_load")
-load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
 load("@osmo_constants//:constants.bzl", "BASE_IMAGE_URL", "IMAGE_TAG")
 
 osmo_py_library(
@@ -43,46 +42,31 @@ osmo_py_library(
 )
 
 osmo_py_binary(
-    name = "router",
+    name = "router_binary",
     main = "router.py",
     srcs = ["router.py"],
     deps = [":router_lib"],
 )
 
-
-run_binary(
-    name = "router_onedir",
-    args = [
-        "--name osmo-router",
-        "--main $(location :router.py)",
-        "--output_dir $(@D)",
-        "--add-data $(location //src/lib/utils:version.yaml):src/lib/utils/",
-        "--additional-hooks $(locations //src/service/builder:extra_hooks)",
-        "--additional-hooks $(locations //src/lib/data/storage:extra_hooks)",
-    ],
-    out_dirs = ["osmo_router_onedir"],
-    tool = "//src/service/builder:service_builder",
-    srcs = [
-        ":router_lib",
-        "router.py",
-        "//src/service/builder:extra_hooks",
-        "//src/lib/data/storage:extra_hooks",
-        "//src/lib/utils:version.yaml",
-    ]
+py_image_layer(
+    name = "router_layer",
+    binary = ":router_binary",
 )
 
-pkg_tar(
-    name = "router_onedir_pkg",
-    extension = "tgz",
-    remap_paths = {
-        "/osmo_router_onedir": ".",
-    },
-    srcs = [":router_onedir"],
-    symlinks = {
-        "/usr/bin/router": "/osmo/osmo-router/osmo-router",
-    },
-    mode = "0755",
-    visibility = ["//visibility:public"],
+osmo_python_wrapper(
+    name = "router_wrapper",
+    bin_name = "router",
+    main = "/src/service/router/router.py",
+    runfiles_dir = "/src/service/router/router_binary.runfiles",
+)
+
+filegroup(
+    name = "router_image_layers",
+    srcs = [
+        ":router_layer_default",
+        ":router_layer_packages",
+        ":router_wrapper",
+    ],
 )
 
 ################
@@ -93,8 +77,8 @@ oci_image(
     name = "router_image_x86_64",
     base = "//src:osmo_docker_distroless_image_amd64",
     tars = [
-        ":router_onedir_pkg",
-        "//src/utils/progress_check:progress_check_onedir_pkg",
+        ":router_image_layers",
+        "//src/utils/progress_check:progress_check_image_layers",
     ],
     visibility = ["//visibility:public"],
     target_compatible_with = [
@@ -132,8 +116,8 @@ oci_image(
     name = "router_image_arm64",
     base = "//src:osmo_docker_distroless_image_arm64",
     tars = [
-        ":router_onedir_pkg",
-        "//src/utils/progress_check:progress_check_onedir_pkg",
+        ":router_image_layers",
+        "//src/utils/progress_check:progress_check_image_layers",
     ],
     visibility = ["//visibility:public"],
     target_compatible_with = [
