--- a/src/service/delayed_job_monitor/BUILD
+++ b/src/service/delayed_job_monitor/BUILD
@@ -16,11 +16,10 @@ limitations under the License.
 SPDX-License-Identifier: Apache-2.0
 """
 
-load("//bzl:py.bzl", "osmo_py_binary", "osmo_py_library")
-load("@aspect_bazel_lib//lib:run_binary.bzl", "run_binary")
+load("@aspect_rules_py//py:defs.bzl", "py_image_layer")
+load("//bzl:py.bzl", "osmo_py_binary", "osmo_py_library", "osmo_python_wrapper")
 load("@osmo_python_deps//:requirements.bzl", "requirement")
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_load")
-load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
 load("@osmo_constants//:constants.bzl", "BASE_IMAGE_URL", "IMAGE_TAG")
 
 osmo_py_library(
@@ -40,52 +39,37 @@ osmo_py_library(
         "//src/lib/utils:logging",
         "//src/utils:static_config",
         "//src/utils/job",
-        "//src/utils/progress_check",
+        "//src/utils/progress_check:progress_check_lib",
     ],
     visibility = ["//visibility:public"],
 )
 
 osmo_py_binary(
-    name = "delayed_job_monitor",
+    name = "delayed_job_monitor_binary",
     main = "delayed_job_monitor.py",
     srcs = ["delayed_job_monitor.py"],
     deps = [":delayed_job_monitor_lib"],
 )
 
-
-run_binary(
-    name = "delayed_job_monitor_onedir",
-    args = [
-        "--name osmo-delayed-job-monitor",
-        "--main $(location :delayed_job_monitor.py)",
-        "--output_dir $(@D)",
-        "--add-data $(location //src/lib/utils:version.yaml):src/lib/utils/",
-        "--additional-hooks $(locations //src/service/builder:extra_hooks)",
-        "--additional-hooks $(locations //src/lib/data/storage:extra_hooks)",
-    ],
-    out_dirs = ["osmo_delayed_job_monitor_onedir"],
-    tool = "//src/service/builder:service_builder",
-    srcs = [
-        "delayed_job_monitor.py",
-        ":delayed_job_monitor_lib",
-        "//src/service/builder:extra_hooks",
-        "//src/lib/data/storage:extra_hooks",
-        "//src/lib/utils:version.yaml",
-    ]
+py_image_layer(
+    name = "delayed_job_monitor_layer",
+    binary = ":delayed_job_monitor_binary",
 )
 
-pkg_tar(
-    name = "delayed_job_monitor_onedir_pkg",
-    extension = "tgz",
-    remap_paths = {
-        "/osmo_delayed_job_monitor_onedir": ".",
-    },
-    srcs = [":delayed_job_monitor_onedir"],
-    symlinks = {
-        "/usr/bin/delayed_job_monitor": "/osmo/osmo-delayed-job-monitor/osmo-delayed-job-monitor",
-    },
-    mode = "0755",
-    visibility = ["//visibility:public"],
+osmo_python_wrapper(
+    name = "delayed_job_monitor_wrapper",
+    bin_name = "delayed_job_monitor",
+    main = "/src/service/delayed_job_monitor/delayed_job_monitor.py",
+    runfiles_dir = "/src/service/delayed_job_monitor/delayed_job_monitor_binary.runfiles",
+)
+
+filegroup(
+    name = "delayed_job_monitor_image_layers",
+    srcs = [
+        ":delayed_job_monitor_layer_default",
+        ":delayed_job_monitor_layer_packages",
+        ":delayed_job_monitor_wrapper",
+    ],
 )
 
 ################
@@ -96,8 +80,8 @@ oci_image(
     name = "delayed_job_monitor_image_x86_64",
     base = "//src:osmo_docker_distroless_image_amd64",
     tars = [
-        ":delayed_job_monitor_onedir_pkg",
-        "//src/utils/progress_check:progress_check_onedir_pkg",
+        ":delayed_job_monitor_image_layers",
+        "//src/utils/progress_check:progress_check_image_layers",
     ],
     visibility = ["//visibility:public"],
     target_compatible_with = [
@@ -135,8 +119,8 @@ oci_image(
     name = "delayed_job_monitor_image_arm64",
     base = "//src:osmo_docker_distroless_image_arm64",
     tars = [
-        ":delayed_job_monitor_onedir_pkg",
-        "//src/utils/progress_check:progress_check_onedir_pkg",
+        ":delayed_job_monitor_image_layers",
+        "//src/utils/progress_check:progress_check_image_layers",
     ],
     visibility = ["//visibility:public"],
     target_compatible_with = [
