--- a/src/service/logger/BUILD
+++ b/src/service/logger/BUILD
@@ -1,26 +1,23 @@
-"""
-SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+# SPDX-License-Identifier: Apache-2.0
 
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-
-SPDX-License-Identifier: Apache-2.0
-"""
-
-load("//bzl:py.bzl", "osmo_py_binary", "osmo_py_library")
-load("@aspect_bazel_lib//lib:run_binary.bzl", "run_binary")
+load("@aspect_rules_py//py:defs.bzl", "py_image_layer")
+load("//bzl:py.bzl", "osmo_py_binary", "osmo_py_library", "osmo_python_wrapper")
 load("@osmo_python_deps//:requirements.bzl", "requirement")
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_load")
-load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
 load("@osmo_constants//:constants.bzl", "BASE_IMAGE_URL", "IMAGE_TAG")
 
 osmo_py_library(
@@ -47,7 +44,7 @@ osmo_py_library(
         requirement("redis"),
         requirement("uvicorn"),
         "//src/lib/utils:logging",
-        "//src/utils/progress_check",
+        "//src/utils/progress_check:progress_check_lib",
         "//src/service/core/auth",
         "//src/service/core/workflow",
         "//src/utils:static_config",
@@ -57,45 +54,33 @@ osmo_py_library(
 )
 
 osmo_py_binary(
-    name = "logger",
+    name = "logger_binary",
     srcs = ["logger.py"],
     main = "logger.py",
-    deps = [":logger_lib"],
-)
-
-
-run_binary(
-    name = "logger_onedir",
-    args = [
-        "--name osmo-logger",
-        "--main $(location :logger.py)",
-        "--output_dir $(@D)",
-        "--add-data $(location //src/lib/utils:version.yaml):src/lib/utils/",
-        "--additional-hooks $(locations //src/service/builder:extra_hooks)",
-        "--additional-hooks $(locations //src/lib/data/storage:extra_hooks)",
-    ],
-    out_dirs = ["osmo_logger_onedir"],
-    tool = "//src/service/builder:service_builder",
-    srcs = [
+    deps = [
         ":logger_lib",
-        "logger.py",
-        "//src/service/builder:extra_hooks",
-        "//src/lib/data/storage:extra_hooks",
-        "//src/lib/utils:version.yaml",
-    ]
+    ],
 )
 
-pkg_tar(
-    name = "logger_onedir_pkg",
-    extension = "tgz",
-    remap_paths = {
-        "/osmo_logger_onedir": ".",
-    },
-    srcs = [":logger_onedir"],
-    symlinks = {
-        "/usr/bin/logger": "/osmo/osmo-logger/osmo-logger",
-    },
-    mode = "0755",
+py_image_layer(
+    name = "logger_layer",
+    binary = ":logger_binary",
+)
+
+osmo_python_wrapper(
+    name = "logger_wrapper",
+    bin_name = "logger",
+    main = "/src/service/logger/logger.py",
+    runfiles_dir = "/src/service/logger/logger_binary.runfiles",
+)
+
+filegroup(
+    name = "logger_image_layers",
+    srcs = [
+        ":logger_layer_default",
+        ":logger_layer_packages",
+        ":logger_wrapper",
+    ],
 )
 
 ################
@@ -106,8 +91,8 @@ oci_image(
     name = "logger_image_x86_64",
     base = "//src:osmo_docker_distroless_image_amd64",
     tars = [
-        ":logger_onedir_pkg",
-        "//src/utils/progress_check:progress_check_onedir_pkg",
+        ":logger_image_layers",
+        "//src/utils/progress_check:progress_check_image_layers",
     ],
     visibility = ["//visibility:public"],
     target_compatible_with = [
@@ -145,8 +130,8 @@ oci_image(
     name = "logger_image_arm64",
     base = "//src:osmo_docker_distroless_image_arm64",
     tars = [
-        ":logger_onedir_pkg",
-        "//src/utils/progress_check:progress_check_onedir_pkg",
+        ":logger_image_layers",
+        "//src/utils/progress_check:progress_check_image_layers",
     ],
     target_compatible_with = [
         "@platforms//cpu:arm64",
