Address Virtual Developer Review (VDR) Feedback (#128)
* Address Virtual Developer Review (VDR) Feedback

* Fix

* Fix workflow spec

--- a/workflows/synthetic_data_generation/isaac_sim/isaac_sim_sdg.yaml
+++ b/workflows/synthetic_data_generation/isaac_sim/isaac_sim_sdg.yaml
@@ -42,7 +42,7 @@ workflow:
       path: /tmp/config.json
     outputs:
     - dataset:
-        name: name: isaac-sim-sdg-sample
+        name: isaac-sim-sdg-sample
   resources:
     default:
       cpu: 4
