--- a/workflows/ros/comm/ros2_comm.yaml
+++ b/workflows/ros/comm/ros2_comm.yaml
@@ -44,7 +44,7 @@ workflow:
           apt-get update
           apt-get install -y dnsutils
 
-          DISCOVERY_SERVER_IP=$(nslookup {{host:discovery-server}} | grep -oP \
+          DISCOVERY_SERVER_IP=$(nslookup -type=A {{host:discovery-server}} | grep -oP \
               'Address: \K\d[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')
 
           export ROS_DISCOVERY_SERVER=$DISCOVERY_SERVER_IP:11811
@@ -66,7 +66,7 @@ workflow:
           apt-get update
           apt-get install -y dnsutils
 
-          DISCOVERY_SERVER_IP=$(nslookup {{host:discovery-server}} | grep -oP \
+          DISCOVERY_SERVER_IP=$(nslookup -type=A {{host:discovery-server}} | grep -oP \
               'Address: \K\d[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')
 
           export ROS_DISCOVERY_SERVER=$DISCOVERY_SERVER_IP:11811
