Efficient Workflow Cleanup through Using Async Operations for Log Migration (#167)
* Improving Performance for Uploading Workflow Artifacts in Worker Jobs

* Cleanup

* Add progress writing after upload

* Add dependency in Bazel BUILD

* Add type to mypy requirements

* Update mypy requirements

* Add to mypy_cli BUILD

* Fix lint

* Comment

* Use constant to define semaphor and storage client executor count

--- a/bzl/mypy/BUILD
+++ b/bzl/mypy/BUILD
@@ -56,6 +56,7 @@ mypy_cli(
         type_requirement("types-six"),
         type_requirement("types-tqdm"),
         type_requirement("types-urllib3"),
+        type_requirement("types-aiofiles"),
     ],
     python_version = "3.10.18",
     tags = ["no-mypy"],
